--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "module": "esm/index.js",
   "sideEffects": false,
   "files": [
-    "lib/",
-    "esm/"
+    "dist/"
   ],
   "types": "lib/index.d.ts",
   "typings": "lib/index.d.ts",
