--- a/package.json
+++ b/package.json
@@ -2,27 +2,35 @@
   "name": "progress-it",
   "version": "1.0.1",
   "description": "map boolean as floating number",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "sideEffects": false,
-  "files": [
-    "dist/"
-  ],
-  "types": "dist/index.d.ts",
-  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch"
+    "dev": "webpack server --node-env development",
+    "build": "webpack --node-env production --progress",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "test": "jest"
   },
   "dependencies": {
-    "@types/node": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "eslint": "^7.32.0",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.4",
+    "@types/copy-webpack-plugin": "^8.0.0",
+    "@types/jest": "^27.0.2",
+    "@types/webpack": "^4.41.29",
+    "@types/webpack-dev-server": "^3.11.4",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.2.1",
+    "eslint": "^7.28.0",
+    "jest": "^27.0.4",
+    "ts-jest": "^27.0.3",
+    "ts-loader": "^8.0.14",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
-  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/UILKUNP/progress-boolean.git"
@@ -32,43 +40,5 @@
   "bugs": {
     "url": "https://github.com/UILKUNP/progress-boolean/issues"
   },
-  "homepage": "https://github.com/UILKUNP/progress-boolean#readme",
-  "config": {
-    "commitizen": {
-      "path": "git-cz"
-    }
-  },
-  "release": {
-    "branches": [
-      "master",
-      {
-        "name": "next",
-        "prerelease": "rc"
-      }
-    ],
-    "verifyConditions": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/git"
-    ],
-    "prepare": [
-      "@semantic-release/changelog",
-      "@semantic-release/npm",
-      "@semantic-release/git"
-    ]
-  },
-  "lint-staged": {
-    "src/**/**/*.{ts,tsx}": [
-      "eslint --fix",
-      "git add"
-    ]
-  },
-  "volta": {
-    "node": "14.17.6",
-    "yarn": "1.22.11"
-  },
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/react-use"
-  }
+  "homepage": "https://github.com/UILKUNP/progress-boolean#readme"
 }
