--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "progress-it",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "main": "progress-it/index.min.js",
   "description": "map boolean as floating number",
   "scripts": {
@@ -24,7 +24,7 @@
     "copy-webpack-plugin": "^6.2.1",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
-    "progress-it": "^1.0.2",
+    "progress-it": "^1.0.7",
     "ts-jest": "^27.0.3",
     "ts-loader": "^8.0.14",
     "ts-node": "^10.0.0",
@@ -37,6 +37,7 @@
     "type": "git",
     "url": "git+https://github.com/UILKUNP/progress-boolean.git"
   },
+  "typings": "progress-it/index.d.ts",
   "author": "UILUNP",
   "license": "MIT",
   "bugs": {
